did exercise 5 in week 2

--- a/week02/05_Exercises_and_Homework_Week_2.ipynb
+++ b/week02/05_Exercises_and_Homework_Week_2.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,8 +427,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here please"
+    "def nuggetsCalculator(N):\n",
+    "    m,n,o = 0, 0, 0\n",
+    "    canBought = False\n",
+    "    while m*6 <= N:\n",
+    "        while n*9 <= N:\n",
+    "            while o*20 <= N:\n",
+    "                if 6 * m + 9 * n + 20 * o == N:\n",
+    "                    print(N, \"Nuggets can be bought with:\")\n",
+    "                    print(m, \"packages of 6 pieces\")\n",
+    "                    print(n, \"packages of 9 pieces\")\n",
+    "                    print(o, \"packages of 20 pieces \\n\")\n",
+    "                    canBought = True\n",
+    "                o = o + 1\n",
+    "            o = 0\n",
+    "            n = n + 1\n",
+    "        o = 0\n",
+    "        n = 0\n",
+    "        m = m + 1\n",
+    "    if canBought == False:\n",
+    "        print(N, \"Nuggets cannot be bought!\")\n",
+    "\n",
+    "# gives N a number        \n",
+    "N = 60\n",
+    "nuggetsCalculator(N)\n",
+    "                "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
