did some improvements on annikas code

--- a/week02/05_Exercises_and_Homework_Week_2.ipynb
+++ b/week02/05_Exercises_and_Homework_Week_2.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,9 +423,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60 Nuggets can be bought with:\n",
+      "0 packages of 6 pieces\n",
+      "0 packages of 9 pieces\n",
+      "3 packages of 20 pieces\n",
+      "60 Nuggets can be bought with:\n",
+      "1 packages of 6 pieces\n",
+      "6 packages of 9 pieces\n",
+      "0 packages of 20 pieces\n",
+      "60 Nuggets can be bought with:\n",
+      "4 packages of 6 pieces\n",
+      "4 packages of 9 pieces\n",
+      "0 packages of 20 pieces\n",
+      "60 Nuggets can be bought with:\n",
+      "7 packages of 6 pieces\n",
+      "2 packages of 9 pieces\n",
+      "0 packages of 20 pieces\n",
+      "60 Nuggets can be bought with:\n",
+      "10 packages of 6 pieces\n",
+      "0 packages of 9 pieces\n",
+      "0 packages of 20 pieces\n"
+     ]
+    }
+   ],
    "source": [
     "def nuggetsCalculator(N):\n",
     "    m,n,o = 0, 0, 0\n",
@@ -437,7 +464,7 @@
     "                    print(N, \"Nuggets can be bought with:\")\n",
     "                    print(m, \"packages of 6 pieces\")\n",
     "                    print(n, \"packages of 9 pieces\")\n",
-    "                    print(o, \"packages of 20 pieces \\n\")\n",
+    "                    print(o, \"packages of 20 pieces\")\n",
     "                    canBought = True\n",
     "                o = o + 1\n",
     "            o = 0\n",
