--- a/week02/05_Exercises_and_Homework_Week_2.ipynb
+++ b/week02/05_Exercises_and_Homework_Week_2.ipynb
@@ -382,7 +382,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution with the forward relation from eq. (2)"
+    "# Your solution with the forward relation from eq. (2)\n",
+    "import numpy as np\n",
+    "ntarget = 20\n",
+    "i_n = np.log(11/10)\n",
+    "i = 1\n",
+    "while i <= ntarget:\n",
+    "    print(i,i_n)\n",
+    "    i_n = (1/i - 10.0*i_n)\n",
+    "    i += 1"
    ]
   },
   {
@@ -391,7 +399,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution with the reverse relation from eq. (3)"
+    "# Your solution with the reverse relation from eq. (3)\n",
+    "ntarget = 20\n",
+    "i_n = 0\n",
+    "i = 50\n",
+    "while i >= ntarget:\n",
+    "    print(i,i_n)\n",
+    "    i_n = (1/i -i_n)/10\n",
+    "    i = i - 1"
    ]
   },
   {
