finished homework 2 and started homework 3

--- a/week02/05_Exercises_and_Homework_Week_2.ipynb
+++ b/week02/05_Exercises_and_Homework_Week_2.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your group number here please:**  Group XX"
+    "**Your group number here please:**  Group 2-1"
    ]
   },
   {
@@ -378,9 +378,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 0.09531017980432493\n",
+      "2 0.04689820195675065\n",
+      "3 0.031017980432493486\n",
+      "4 0.023153529008398455\n",
+      "5 0.018464709916015454\n",
+      "6 0.015352900839845474\n",
+      "7 0.013137658268211921\n",
+      "8 0.011480560175023635\n",
+      "9 0.010194398249763648\n",
+      "10 0.009167128613474629\n",
+      "11 0.008328713865253717\n",
+      "12 0.007621952256553738\n",
+      "13 0.00711381076779595\n",
+      "14 0.005784969245117427\n",
+      "15 0.013578878977397152\n",
+      "16 -0.06912212310730485\n",
+      "17 0.7537212310730486\n",
+      "18 -7.478388781318721\n",
+      "19 74.83944336874276\n",
+      "20 -748.3418021084802\n"
+     ]
+    }
+   ],
    "source": [
     "# Your solution with the forward relation from eq. (2)\n",
     "import numpy as np\n",
@@ -394,10 +421,55 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "The result of these calculations should never be smaller than 0, but for $n>=16$ this is the case. This is caused by the numeric error $\\epsilon$, which is multiplied in each step by a factor of 10. So if we assume $\\epsilon \\approx 10^{-18}$ from exercise 1, this leads to an total error of $\\Epsilon \\approx 10^{-3}$ after 15 steps. So the error may be larger than the actual numerical value and thus the sign flips and the series diverges."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50 0\n",
+      "49 0.002\n",
+      "48 0.0018408163265306123\n",
+      "47 0.0018992517006802719\n",
+      "46 0.001937734404400058\n",
+      "45 0.001980139603038255\n",
+      "44 0.002024208261918397\n",
+      "43 0.0020703064465354333\n",
+      "42 0.0021185507506952935\n",
+      "41 0.002169097305882851\n",
+      "40 0.0022221146596556173\n",
+      "39 0.0022777885340344384\n",
+      "38 0.00233632371069912\n",
+      "37 0.002397946576298509\n",
+      "36 0.002462908045072852\n",
+      "35 0.0025314869732704923\n",
+      "34 0.002603994159815808\n",
+      "33 0.0026807770546066543\n",
+      "32 0.002762225324842365\n",
+      "31 0.0028487774675157633\n",
+      "30 0.002940928704861327\n",
+      "29 0.0030392404628472006\n",
+      "28 0.003144351815784245\n",
+      "27 0.003256993389850147\n",
+      "26 0.003378004364718689\n",
+      "25 0.0035083534096819772\n",
+      "24 0.0036491646590318025\n",
+      "23 0.003801750200763486\n",
+      "22 0.003967651066880172\n",
+      "21 0.004148689438766529\n",
+      "20 0.004347035818028109\n"
+     ]
+    }
+   ],
    "source": [
     "# Your solution with the reverse relation from eq. (3)\n",
     "ntarget = 20\n",
@@ -413,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Discussion of results here please"
+    "Here the series does not diverge, since we calculate them from the backwards direction and any potential error $\\epsilon$ is divided by 10 in each step instead of multiplied by 10. Because of this fact these results are more trustworthy than the results obtained from the forward calculations."
    ]
   },
   {
@@ -472,6 +544,9 @@
     "def nuggetsCalculator(N):\n",
     "    m,n,o = 0, 0, 0\n",
     "    canBought = False\n",
+    "    #iterate over all possibilities and print out all valid ones\n",
+    "    #limits are given by e.g. m*6 <= N, since there is no way to find a valid combination, if m*6 is already larger than N\n",
+    "    #the same is true for the limits of n and o\n",
     "    while m*6 <= N:\n",
     "        while n*9 <= N:\n",
     "            while o*20 <= N:\n",
