kommentare für pendanten

--- a/week03/04_Exercises_and_Homework_Week_3.ipynb
+++ b/week03/04_Exercises_and_Homework_Week_3.ipynb
@@ -382,12 +382,19 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def riemannSum(func, interval, color, nBars):\n",
-    "    x = np.linspace(interval[0],interval[1], 1000)\n",
-    "    step = int(np.ceil(1000/nBars))\n",
-    "    xBar = x[::step] \n",
-    "    plt.bar(xBar,func(xBar),(xBar[1]-xBar[0]), color = color, edgecolor = \"k\")\n",
-    "    plt.plot(x,func(x), color = \"k\")\n",
-    "    plt.show()\n",
+    "    \"\"\"\n",
+    "    plot the riemann sum defined above \n",
+    "    func: function pointer callable on np arrays\n",
+    "    interval: list of the min and max value sorted\n",
+    "    color: matplotlib color of the bars\n",
+    "    nBars: number of bars\n",
+    "    \"\"\"\n",
+    "    x = np.linspace(interval[0],interval[1], 1000) #generate x values for function\n",
+    "    step = int(np.ceil(1000/nBars)) # calculate the width of the bars in multiples of indices of x\n",
+    "    xBar = x[::step] # get the x values of the bars\n",
+    "    plt.bar(xBar,func(xBar),(xBar[1]-xBar[0]), color = color, edgecolor = \"k\") # plot bars\n",
+    "    plt.plot(x,func(x), color = \"k\") # plot function\n",
+    "    plt.show() # show\n",
     "\n",
     "def xQubed(x):\n",
     "    return np.power(x,3)\n",
