finished exercise 3 of week 5

--- a/week05/05_Exercises_and_Homework_Week_5_students.ipynb
+++ b/week05/05_Exercises_and_Homework_Week_5_students.ipynb
@@ -184,7 +184,88 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here please"
+    "# Your solution here please\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "#number of discret points in x and y direction\n",
+    "num_points=101\n",
+    "#arrays for x and y coordinates\n",
+    "x = np.linspace(0, 1, num_points)\n",
+    "y = np.linspace(0, 1, num_points)\n",
+    "\n",
+    "#create meshgrids for later plotting\n",
+    "X,Y = np.meshgrid(x,y)\n",
+    "#create grid for potential\n",
+    "phi = np.zeros((num_points, num_points))\n",
+    "#define positions of capacitor plates\n",
+    "x_left = 0.3\n",
+    "x_right = 0.7\n",
+    "y_min = 0.3\n",
+    "y_max = 0.7\n",
+    "#mask for placement of capacitor plates in y direction\n",
+    "boundary_mask_y = np.logical_and(y>=y_min,y <= y_max)\n",
+    "\n",
+    "#apply boundray conditions\n",
+    "#phi(x=x_left) = -1\n",
+    "phi[boundary_mask_y, np.isclose(x,x_left)] = -1\n",
+    "#phi(x=x_right) = 1\n",
+    "phi[boundary_mask_y, np.isclose(x,x_right)] = 1\n",
+    "#boundary condition 0 at the outer edge\n",
+    "phi[ 0:,[0,-1 ]] = 0.0\n",
+    "phi[[0,-1], 0:] = 0.0\n",
+    "\n",
+    "#save phi_0 for later visualization\n",
+    "phi_0 = phi\n",
+    "\n",
+    "#calcualte phi_n up until convergence\n",
+    "delta = 1\n",
+    "while delta > 1e-4:\n",
+    "    phi_n = np.zeros(phi.shape)\n",
+    "    #calcualte the potential for inner values of the grid, excludes outer bounds\n",
+    "    phi_n[1:-1,1:-1] = 0.25*( phi[2:,1:-1] + phi[:-2, 1:-1] + phi[1:-1,2:] + phi[1:-1,:-2] )\n",
+    "    \n",
+    "    #apply boundary conditions\n",
+    "    phi_n[boundary_mask_y, np.isclose(x,x_left)] = -1\n",
+    "    #phi(x=x_right) = 1\n",
+    "    phi_n[boundary_mask_y, np.isclose(x,x_right)] = 1\n",
+    "    #boundary condition 0 at the outer edge\n",
+    "    #this step is not strictly necessary, but it ensures all boundary conditions are fullfilled\n",
+    "    phi_n[ 0:,[0,-1 ]] = 0.0\n",
+    "    phi_n[[0,-1], 0:] = 0.0\n",
+    "    #calculate maximum delta\n",
+    "    delta = np.max(np.abs(phi-phi_n))\n",
+    "    #override new potential\n",
+    "    phi = phi_n\n",
+    "    \n",
+    "\n",
+    "#plot electric potential of the plate capacitor\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.set_xlim(0.0, 1.0)\n",
+    "ax.set_ylim(0.0, 1.0)\n",
+    "#use colour plot for visualization\n",
+    "c = ax.pcolormesh(X,Y,phi, cmap=\"RdBu\", vmin=-1, vmax=1)\n",
+    "ax.set_xlabel(\"x\")\n",
+    "ax.set_ylabel(\"y\")\n",
+    "ax.set_title(\"Electric potential of a plate capacitor\")\n",
+    "ax.grid()\n",
+    "#plot colorbar at the side\n",
+    "fig.colorbar(c, ax=ax)\n",
+    "plt.show()\n",
+    "\n",
+    "#calculate electric field as the gradient of the potential\n",
+    "Ey, Ex = np.gradient(-phi, x[1]-x[0], y[1]-y[0])\n",
+    "#plot electric field\n",
+    "fig1, ax1 = plt.subplots()\n",
+    "#plot electric potential for comparison\n",
+    "c1 = ax1.pcolormesh(X,Y, phi, cmap=\"RdBu\", vmin=-1, vmax=1)\n",
+    "ax1.set_xlabel(\"x\")\n",
+    "ax1.set_ylabel(\"y\")\n",
+    "ax1.set_title(\"Electric field of a plate capacitor\")\n",
+    "#plot electric potential as a vectorfield\n",
+    "ax1.streamplot(X, Y, Ex, Ey, color='black', density=0.5)\n",
+    "fig.colorbar(c1, ax=ax1)\n",
+    "fig.show()"
    ]
   },
   {
